--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">hi</div>
+    <h1>malli</h1>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
